tests/e2e/pass/v2_lowercase_struct_init.ep
# EXIT: 7

type point {
    x: i64
    y: i64
}

fun run(): i64 {
    let p = new point { x: 7, y: 3 }
    ret p.x
}

fun main(): void {
    exit(run())
}
