tests/e2e/fail/is_null_bool.ep
# COMPILE_ERROR: is_null expects a reference, got bool
fun main(): void {
    let result = is_null(false)
}
